# mkdocs-nginx

./: .gitignore  Dockerfile  README.md  compose.yml  nginx.conf  pyproject.toml  supervisord.conf
mkdocs/: mkdocs.yml
mkdocs/docs/: others.md
