[tool.poetry]
name = "mkdocs-nginx"
version = "0.1.0"
description = ""
authors = ["Ale"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
mkdocs = "1.6.0"
mkdocs-material = "9.5.24"
mkdocs-glightbox = "0.4.0"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"